Imagenes Ingredientes Y Pasos

--- a/Recetas/Asado.html
+++ b/Recetas/Asado.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Asado</title>
 </head>
 <body>
+    
     <h1>Asado</h1>
+    <img src="../Media/Asado.jpg" alt="">
+    <p>Asado</p>
+
+    <ul>
+        <p>Ingredientes</p>
+        <li>No se no me alcanza la plata</li>
+    </ul>
+
+    <ol>
+        <p>Pasos</p>
+        <li>No se pibe</li>
+    </ol>
+
 </body>
 </html>
