--- a/Recetas/Empanadas.html
+++ b/Recetas/Empanadas.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Empanadas</title>
 </head>
 <body>
     <h1>Empanadas</h1>
+    <img src="../Media/Empanadas.jpg" alt="">
+    <p>Empanadas</p>
+
+    <ul>
+        <p>Ingredientes</p>
+        <Li>Tapas</Li>
+        <li>Relleno</li>
+    </ul>
+
+    <ol>
+        <p>Pasos</p>
+        <li>Pedirlas en una rotiseria</li>
+        <li>Perturbador</li>
+    </ol>
+
 </body>
 </html>
