--- a/Recetas/Papas fritas.html
+++ b/Recetas/Papas fritas.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Papas Fritas</title>
 </head>
 <body>
     <h1>Papas Fritas</h1>
+    <img src="../Media/Papas Fritas.png" alt="">
+    <p>Papas Fritas</p>
+
+    <ul>
+        <p>Ingredientes</p>
+        <li>1 Kg De Papas</li>
+    </ul>
+
+    <ol>
+        <p>Pasos</p>
+        <li>Pelar las papas</li>
+        <li>Cortarlas en bastoncitos</li>
+        <li>Poner en aceite caliente hasta que queden a tu gusto</li>
+        <li>Comer</li>
+    </ol>
+
 </body>
 </html>
