--- a/Recetas/Pure.html
+++ b/Recetas/Pure.html
@@ -6,6 +6,22 @@
     <title>Pure</title>
 </head>
 <body>
+
     <h1>Pure</h1>
+    <img src="../Media/Pure.jpg" alt="">
+    <p>Pure de papas</p>
+    <ul>
+        <p>Ingredientes</p>
+        <li>1 Kg De Papas</li>
+        <li>Sal a gusto</li>
+    </ul>
+
+    <ol>
+        <p>Pasos</p>
+        <li>Comprar papas</li>
+        <li>?</li>
+        <li>Comer</li>
+    </ol>
+
 </body>
 </html>
