Cambios en Index

--- a/Index.html
+++ b/Index.html
@@ -11,11 +11,13 @@
 <body>
 
     <h1>Recetas</h1>
-    <a href="Recetas/Asado.html">Asado</a>
-    <a href="Recetas/Empanadas.html">Empanadas</a>
-    <a href="Recetas/Milanesa.html">Milanesa</a>
-    <a href="Recetas/Papas fritas.html">Papas Fritas</a>
-    <a href="Recetas/Pure.html">Pure</a>
+    <ul>
+        <li><a href="Recetas/Asado.html">Asado</a></li>
+        <li><a href="Recetas/Empanadas.html">Empanadas</a></li>
+        <li><a href="Recetas/Milanesa.html">Milanesa</a></li>
+        <li><a href="Recetas/Papas fritas.html">Papas Fritas</a></li>
+        <li><a href="Recetas/Pure.html">Pure</a></li>
+    </ul>
 
 </body>
 
